[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Exercise 1: Loading Programs - simulated Matrix data pipeline"
authors = ["lcristur <lcristur@student.42malaga.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"